# binsketch-algorithm

./: .gitignore  GPU_IMPLEMENTATION.md  README.md  bin_sketch.ipynb  convert.py  download_dataset.py  main.py  my_results.csv  pyproject.toml  requirements.txt  save_ground_truth.py  test_pipeline.py  test_results.json
experiment/: __init__.py  experiment1.py  experiment2.py  utils.py
results/: test_results_20260121_025120.json  test_results_20260121_025331.json
scripts/: convert.py  filter_json.py  save_ground_truth.py
src/: __init__.py  gpu_utils.py  metric.py  similarity_scores.py  utils.py
src/models/: __init__.py  base.py  bcs.py  binsketch.py  minhash.py  simhash.py
tests/: test_pipeline.py
